--- a/env/jenkinsfile
+++ b/env/jenkinsfile
@@ -1,5 +1,7 @@
 pipeline {
-    agent any
+    agent {
+        label "master"
+    }
     stages {
         stage('Displaying Environment Variables') {
             steps {
@@ -11,7 +13,7 @@ pipeline {
                 echo "The job URL is: ${JOB_URL}"
                 echo "The workspace is: ${WORKSPACE}" 
                 echo "BUILD_DISPLAY_NAME: ${BUILD_DISPLAY_NAME}" 
-                echo "BUILD_TIMESTAMP: ${BUILD_TIMESTAMP}" 
+                // echo "BUILD_TIMESTAMP: ${BUILD_TIMESTAMP}" 
                 echo "JOB_DISPLAY_URL: ${JOB_DISPLAY_URL}" 
                 echo "BUILD_URL_ANCHOR: ${BUILD_URL}/console"  
                 echo "WORKSPACE: ${WORKSPACE}"  
